AC_INIT([libpaps],[0.6.8])

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(paps, 0.6.8)

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL

DX_HTML_FEATURE(ON)
DX_CHM_FEATURE(OFF)
DX_CHI_FEATURE(OFF)
DX_MAN_FEATURE(OFF)
DX_RTF_FEATURE(OFF)
DX_XML_FEATURE(OFF)
DX_PDF_FEATURE(OFF)
DX_PS_FEATURE(OFF)

DX_INIT_DOXYGEN(libpaps, doxygen.cfg, doxygen-doc)

AC_OUTPUT(Makefile src/Makefile)
